<resources>
    <string name="app_name">CapstoneNewsApp</string>
    <string name="article1">TextView</string>
    <string name="article2">TextView</string>
    <string name="article3">TextView</string>
    <string name="article4">TextView</string>
    <string name="article5">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="downloadwifi">Download on wifi</string>
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>
<!--    <item name="custom_menu_items" type="id">custom_menu_items</item>-->
</resources>